--- a/experience.css
+++ b/experience.css
@@ -38,7 +38,7 @@ body, html {
 #experience h2{
     font-weight: bold;
     color: #1949B7;
-    font-size: 1.7vw;
+    font-size: 24px;
     margin-bottom: 2vw;
     font-variant: small-caps;
 }
@@ -48,7 +48,7 @@ body, html {
 }
 #experience h3 {
     font-weight: bold;
-    font-size: 1.4vw;
+    font-size: 20px;
     margin-top: 0;
 }
 #org {
@@ -56,7 +56,7 @@ body, html {
     margin: 0 !important;
 }
 #experience span {
-    font-size: 1.3vw;
+    font-size: 18px;
 }
 #experience div {
     margin-bottom: 4vw;
@@ -66,18 +66,21 @@ body, html {
     margin-bottom: 1.5vw;
 }
 #experience p {
-    font-size: 1.2vw;
+    font-size: 16px;
     margin-top: 0;
-    line-height: 2.2vw;
+    line-height: 2;
 }
 #experience h4 {
     text-align: right;
     font-weight: bold;
-    font-size: 1.2vw;
+    font-size: 16px;
 }
 
 .fa {
     display: inline;
     padding-right: 20px;
     height: 3vw;
+}
+.col-lg-2 {
+    padding-bottom: 20px !important;
 }
