--- a/home.css
+++ b/home.css
@@ -16,9 +16,9 @@ body, html {
 }
 
 #title {
-    right: 10%;
-    top: 40%;
-    font-size: 5vw;
+    right: 5vw;
+    top: 25%;
+    font-size: 6vw;
     position: absolute;
     float: right;
     display: block;
@@ -26,7 +26,7 @@ body, html {
 
 #creds {
     position: absolute;
-    font-size: 1vw;
+    font-size: 12px;
     bottom: 0;
     left: .5vw;
 }
@@ -41,12 +41,12 @@ body, html {
 #about h2, #contact h2{
     font-weight: bold;
     color: #1949B7;
-    font-size: 1.7vw;
+    font-size: 24px;
     margin-bottom: 2vw;
     font-variant: small-caps;
 }
 #about p, #contact p{
-    font-size: 1.3vw;
+    font-size: 18px;
 }
 #about a, #contact a, a:visited {
     color: #1949B7;
